--- a/com.qq.xw.www/css/video.css
+++ b/com.qq.xw.www/css/video.css
@@ -103,13 +103,537 @@ header {
   border-radius: calc(10rem / 16);
   background-color: #fff;
   box-sizing: border-box;
-  padding-left: calc(2rem / 16);
-  padding-right: calc(2rem / 16);
+  padding-left: calc(12rem / 16);
+  padding-right: calc(12rem / 16);
 }
 /* 第一部分 */
+.one {
+  width: 100%;
+  height: calc(226rem / 16);
+}
 .section-one {
   width: 100%;
-  height: calc(26rem / 16);
-  margin-top: calc(25rem / 16);
+  height: calc(226rem / 16);
+  margin-top: calc(15rem / 16);
   margin-bottom: calc(10rem / 16);
+}
+.section-one a {
+  display: inline-block;
+  width: 100%;
+  height: calc(185rem / 16);
+  background-size: cover;
+  border-radius: calc(5rem / 16);
+  background-image: url("../image/lanqiu1.jpg");
+}
+.section-one h5 {
+  padding-left: calc(12rem / 16);
+  padding-right: calc(12rem / 16);
+  box-sizing: border-box;
+  line-height: calc(23rem / 16);
+  color: rgb(255, 255, 255);
+  font-size: calc(17rem / 16);
+  font-weight: normal;
+  margin-top: calc(5rem / 16);
+}
+.section-one i {
+  display: inline-block;
+  margin-left: 42%;
+  margin-top: calc(20rem / 16);
+  width: calc(48rem / 16);
+  height: calc(48rem / 16);
+}
+.section-one i img {
+  width: calc(48rem / 16);
+  height: calc(48rem / 16);
+}
+.section-one span {
+  display: block;
+  margin-left: calc(225rem / 16);
+  margin-top: calc(34rem / 16);
+  width: calc(108rem / 16);
+  height: calc(17rem / 16);
+  line-height: calc(17rem / 16);
+  font-size: calc(12rem / 16);
+  color: rgb(255, 255, 255);
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: calc(10rem / 16);
+}
+.section-one span img {
+  vertical-align: top;
+  border-radius: 50%;
+}
+.section-two {
+  width: 100%;
+  height: calc(36rem / 16);
+}
+.section-two span {
+  display: inline-block;
+  width: calc(122rem / 16);
+  height: calc(36rem / 16);
+  line-height: calc(36rem / 16);
+  margin: 0;
+  font-size: calc(14rem / 16);
+  color: rgb(34, 34, 34);
+  margin-right: calc(10rem / 16);
+  background: none;
+}
+.section-two img {
+  margin-top: calc(6rem / 16);
+  vertical-align: middle;
+  width: calc(20rem / 16);
+  height: calc(20rem / 16);
+}
+.section-two b {
+  display: inline-block;
+  font-weight: normal;
+  font-size: calc(12rem / 16);
+  border-radius: calc(10rem / 16);
+  color: rgb(130, 140, 155);
+  width: calc(40rem / 16);
+  height: calc(17rem / 16);
+  text-align: center;
+  padding-right: calc(5rem / 16);
+  padding-left: calc(5rem / 16);
+  box-sizing: border-box;
+  background: rgb(237, 242, 250);
+  line-height: calc(17rem / 16);
+}
+/* 第二部分 */
+.two {
+  width: 100%;
+  height: calc(226rem / 16);
+}
+.section-first {
+  width: 100%;
+  height: calc(226rem / 16);
+}
+.section-first a {
+  display: inline-block;
+  width: 100%;
+  height: calc(185rem / 16);
+  background-size: cover;
+  border-radius: calc(5rem / 16);
+  background-image: url("../image/feiji1.jpg");
+}
+.section-first h5 {
+  padding-left: calc(12rem / 16);
+  padding-right: calc(12rem / 16);
+  box-sizing: border-box;
+  line-height: calc(23rem / 16);
+  color: rgb(255, 255, 255);
+  font-size: calc(17rem / 16);
+  font-weight: normal;
+  margin-top: calc(5rem / 16);
+}
+.section-first i {
+  display: inline-block;
+  margin-left: 42%;
+  margin-top: calc(20rem / 16);
+  width: calc(48rem / 16);
+  height: calc(48rem / 16);
+}
+.section-first i img {
+  width: calc(48rem / 16);
+  height: calc(48rem / 16);
+}
+.section-first span {
+  display: block;
+  margin-left: calc(225rem / 16);
+  margin-top: calc(34rem / 16);
+  width: calc(106rem / 16);
+  height: calc(17rem / 16);
+  line-height: calc(17rem / 16);
+  font-size: calc(12rem / 16);
+  color: rgb(255, 255, 255);
+  background: rgba(0, 0, 0, 0.3);
+  padding-left: calc(7rem / 16);
+  box-sizing: border-box;
+  border-radius: calc(10rem / 16);
+}
+.section-first span img {
+  vertical-align: top;
+  border-radius: 50%;
+}
+.section-two {
+  width: 100%;
+  height: calc(36rem / 16);
+}
+.section-two span {
+  display: inline-block;
+  width: calc(129rem / 16);
+  height: calc(36rem / 16);
+  line-height: calc(36rem / 16);
+  margin: 0;
+  font-size: calc(14rem / 16);
+  color: rgb(34, 34, 34);
+  margin-right: calc(10rem / 16);
+  background: none;
+}
+.section-two img {
+  margin-top: calc(6rem / 16);
+  vertical-align: middle;
+  width: calc(20rem / 16);
+  height: calc(20rem / 16);
+}
+.section-two b {
+  display: inline-block;
+  font-weight: normal;
+  font-size: calc(12rem / 16);
+  border-radius: calc(10rem / 16);
+  color: rgb(130, 140, 155);
+  width: calc(40rem / 16);
+  height: calc(17rem / 16);
+  text-align: center;
+  padding-right: calc(5rem / 16);
+  padding-left: calc(5rem / 16);
+  box-sizing: border-box;
+  background: rgb(237, 242, 250);
+  line-height: calc(17rem / 16);
+}
+
+/* 第三部分 */
+.three {
+  width: 100%;
+  height: calc(226rem / 16);
+}
+.section-three {
+  width: 100%;
+  height: calc(226rem / 16);
+}
+.section-three a {
+  display: inline-block;
+  width: 100%;
+  height: calc(185rem / 16);
+  background-size: cover;
+  border-radius: calc(5rem / 16);
+  background-image: url("../image/qingyunian666.jpg");
+}
+.section-three h5 {
+  padding-left: calc(12rem / 16);
+  padding-right: calc(12rem / 16);
+  box-sizing: border-box;
+  line-height: calc(23rem / 16);
+  color: rgb(255, 255, 255);
+  font-size: calc(17rem / 16);
+  font-weight: normal;
+  margin-top: calc(5rem / 16);
+}
+.section-three i {
+  display: inline-block;
+  margin-left: 42%;
+  margin-top: calc(20rem / 16);
+  width: calc(48rem / 16);
+  height: calc(48rem / 16);
+}
+.section-three i img {
+  width: calc(48rem / 16);
+  height: calc(48rem / 16);
+}
+.section-three span {
+  display: block;
+  margin-left: calc(225rem / 16);
+  margin-top: calc(34rem / 16);
+  width: calc(106rem / 16);
+  height: calc(17rem / 16);
+  line-height: calc(17rem / 16);
+  font-size: calc(12rem / 16);
+  color: rgb(255, 255, 255);
+  background: rgba(0, 0, 0, 0.3);
+  padding-left: calc(7rem / 16);
+  box-sizing: border-box;
+  border-radius: calc(10rem / 16);
+}
+.section-three span img {
+  vertical-align: top;
+  border-radius: 50%;
+}
+.section-two {
+  width: 100%;
+  height: calc(36rem / 16);
+}
+.section-two span {
+  display: inline-block;
+  width: calc(129rem / 16);
+  height: calc(36rem / 16);
+  line-height: calc(36rem / 16);
+  margin: 0;
+  font-size: calc(14rem / 16);
+  color: rgb(34, 34, 34);
+  margin-right: calc(10rem / 16);
+  background: none;
+}
+.section-two img {
+  margin-top: calc(6rem / 16);
+  vertical-align: middle;
+  width: calc(20rem / 16);
+  height: calc(20rem / 16);
+}
+.section-two b {
+  display: inline-block;
+  font-weight: normal;
+  font-size: calc(12rem / 16);
+  border-radius: calc(10rem / 16);
+  color: rgb(130, 140, 155);
+  width: calc(40rem / 16);
+  height: calc(17rem / 16);
+  text-align: center;
+  padding-right: calc(5rem / 16);
+  padding-left: calc(5rem / 16);
+  box-sizing: border-box;
+  background: rgb(237, 242, 250);
+  line-height: calc(17rem / 16);
+}
+
+/* 第四部分 */
+.four {
+  width: 100%;
+  height: calc(226rem / 16);
+}
+.section-four {
+  width: 100%;
+  height: calc(226rem / 16);
+}
+.section-four a {
+  display: inline-block;
+  width: 100%;
+  height: calc(185rem / 16);
+  background-size: cover;
+  border-radius: calc(5rem / 16);
+  background-image: url("../image/qiche2.jpg");
+}
+.section-four h5 {
+  padding-left: calc(12rem / 16);
+  padding-right: calc(12rem / 16);
+  box-sizing: border-box;
+  line-height: calc(23rem / 16);
+  color: rgb(255, 255, 255);
+  font-size: calc(17rem / 16);
+  font-weight: normal;
+  margin-top: calc(5rem / 16);
+}
+.section-four i {
+  display: inline-block;
+  margin-left: 42%;
+  margin-top: calc(20rem / 16);
+  width: calc(48rem / 16);
+  height: calc(48rem / 16);
+}
+.section-four i img {
+  width: calc(48rem / 16);
+  height: calc(48rem / 16);
+}
+.section-four span {
+  display: block;
+  margin-left: calc(225rem / 16);
+  margin-top: calc(34rem / 16);
+  width: calc(106rem / 16);
+  height: calc(17rem / 16);
+  line-height: calc(17rem / 16);
+  font-size: calc(12rem / 16);
+  color: rgb(255, 255, 255);
+  background: rgba(0, 0, 0, 0.3);
+  padding-left: calc(7rem / 16);
+  box-sizing: border-box;
+  border-radius: calc(10rem / 16);
+}
+.section-four span img {
+  vertical-align: top;
+  border-radius: 50%;
+}
+.section-two {
+  width: 100%;
+  height: calc(36rem / 16);
+}
+.section-two span {
+  display: inline-block;
+  width: calc(129rem / 16);
+  height: calc(36rem / 16);
+  line-height: calc(36rem / 16);
+  margin: 0;
+  font-size: calc(14rem / 16);
+  color: rgb(34, 34, 34);
+  margin-right: calc(10rem / 16);
+  background: none;
+}
+.section-two img {
+  margin-top: calc(6rem / 16);
+  vertical-align: middle;
+  width: calc(20rem / 16);
+  height: calc(20rem / 16);
+}
+.section-two b {
+  display: inline-block;
+  font-weight: normal;
+  font-size: calc(12rem / 16);
+  border-radius: calc(10rem / 16);
+  color: rgb(130, 140, 155);
+  width: calc(40rem / 16);
+  height: calc(17rem / 16);
+  text-align: center;
+  padding-right: calc(5rem / 16);
+  padding-left: calc(5rem / 16);
+  box-sizing: border-box;
+  background: rgb(237, 242, 250);
+  line-height: calc(17rem / 16);
+}
+/* 第五部分广告 */
+.section-five {
+  width: 100%;
+  height: calc(240rem / 16);
+  margin-top: calc(5rem / 16);
+  border-bottom: 1px solid rgb(245, 245, 245);
+}
+.section-five-title {
+  display: block;
+
+  width: 100%;
+  height: calc(235rem / 16);
+}
+.section-five-title p {
+  color: rgb(34, 34, 34);
+  font-size: calc(18rem / 16);
+  margin-bottom: calc(5rem / 16);
+}
+.section-five-title img {
+  width: 100%;
+  height: calc(165rem / 16);
+  border-radius: calc(5rem / 16);
+  margin-bottom: calc(5rem / 16);
+}
+.section-five-title span {
+  color: rgb(83, 123, 255);
+  font-size: calc(12rem / 16);
+  margin-right: calc(5rem / 16);
+}
+.section-five-title b {
+  font-size: calc(12rem / 16);
+  color: rgb(130, 140, 155);
+  font-weight: normal;
+}
+
+/* 第六部分 */
+.six {
+  width: 100%;
+  height: calc(226rem / 16);
+}
+.section-six {
+  width: 100%;
+  height: calc(226rem / 16);
+}
+.section-six a {
+  display: inline-block;
+  width: 100%;
+  height: calc(185rem / 16);
+  background-size: cover;
+  border-radius: calc(5rem / 16);
+  background-image: url("../image/zhaoliying1.jpg");
+}
+.section-six h5 {
+  padding-left: calc(12rem / 16);
+  padding-right: calc(12rem / 16);
+  box-sizing: border-box;
+  line-height: calc(23rem / 16);
+  color: rgb(255, 255, 255);
+  font-size: calc(17rem / 16);
+  font-weight: normal;
+  margin-top: calc(5rem / 16);
+}
+.section-six i {
+  display: inline-block;
+  margin-left: 42%;
+  margin-top: calc(20rem / 16);
+  width: calc(48rem / 16);
+  height: calc(48rem / 16);
+}
+.section-six i img {
+  width: calc(48rem / 16);
+  height: calc(48rem / 16);
+}
+.section-six span {
+  display: block;
+  margin-left: calc(225rem / 16);
+  margin-top: calc(34rem / 16);
+  width: calc(106rem / 16);
+  height: calc(17rem / 16);
+  line-height: calc(17rem / 16);
+  font-size: calc(12rem / 16);
+  color: rgb(255, 255, 255);
+  background: rgba(0, 0, 0, 0.3);
+  padding-left: calc(7rem / 16);
+  box-sizing: border-box;
+  border-radius: calc(10rem / 16);
+}
+.section-six span img {
+  vertical-align: top;
+  border-radius: 50%;
+}
+.section-two {
+  width: 100%;
+  height: calc(36rem / 16);
+}
+.section-two span {
+  display: inline-block;
+  width: calc(129rem / 16);
+  height: calc(36rem / 16);
+  line-height: calc(36rem / 16);
+  margin: 0;
+  font-size: calc(14rem / 16);
+  color: rgb(34, 34, 34);
+  margin-right: calc(10rem / 16);
+  background: none;
+}
+.section-two img {
+  margin-top: calc(6rem / 16);
+  vertical-align: middle;
+  width: calc(20rem / 16);
+  height: calc(20rem / 16);
+}
+.section-two b {
+  display: inline-block;
+  font-weight: normal;
+  font-size: calc(12rem / 16);
+  border-radius: calc(10rem / 16);
+  color: rgb(130, 140, 155);
+  width: calc(40rem / 16);
+  height: calc(17rem / 16);
+  text-align: center;
+  padding-right: calc(5rem / 16);
+  padding-left: calc(5rem / 16);
+  box-sizing: border-box;
+  background: rgb(237, 242, 250);
+  line-height: calc(17rem / 16);
+}
+/* 第七部分广告 */
+.section-seven {
+  width: 100%;
+  height: calc(240rem / 16);
+  margin-top: calc(5rem / 16);
+  border-bottom: 1px solid rgb(245, 245, 245);
+}
+.section-seven-title {
+  display: block;
+
+  width: 100%;
+  height: calc(235rem / 16);
+}
+.section-seven-title p {
+  color: rgb(34, 34, 34);
+  font-size: calc(18rem / 16);
+  margin-bottom: calc(5rem / 16);
+}
+.section-seven-title img {
+  width: 100%;
+  height: calc(165rem / 16);
+  border-radius: calc(5rem / 16);
+  margin-bottom: calc(5rem / 16);
+}
+.section-seven-title span {
+  color: rgb(83, 123, 255);
+  font-size: calc(12rem / 16);
+  margin-right: calc(5rem / 16);
+}
+.section-seven-title b {
+  font-size: calc(12rem / 16);
+  color: rgb(130, 140, 155);
+  font-weight: normal;
 }
