--- a/com.meituan.www/css/index.css
+++ b/com.meituan.www/css/index.css
@@ -475,7 +475,7 @@ transition: 0.5s;
   float: left;
   margin-top: 20px;
   margin-left: 20px;
-  background-image: url("../image/Frozen.png");
+  background-image: url("../image/forzen.png");
   background-size: 210px;
   background-repeat: no-repeat;
 }
