--- a/css/movie.css
+++ b/css/movie.css
@@ -182,7 +182,7 @@
   background-image: url("../image/knives-out.png");
 }
 .ishit-bottom a:nth-child(5) {
-  background-image: url("../image/Frozen.png");
+  background-image: url("../image/forzen.png");
 }
 .ishit-bottom a:nth-child(6) {
   background-image: url("../image/people.png");
